--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=ShaiDemo
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/BlueprintsAndMaps/Maps/OverWorldMap.OverWorldMap
-GameDefaultMap=/Game/BlueprintsAndMaps/Maps/OverWorldMap.OverWorldMap
+EditorStartupMap=/Game/BlueprintsAndMaps/Maps/mainMenuMap.mainMenuMap
+GameDefaultMap=/Game/BlueprintsAndMaps/Maps/mainMenuMap.mainMenuMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/myBlueprints/Blueprints/mainGameMode.mainGameMode_C
+GlobalDefaultGameMode=/Game/BlueprintsAndMaps/Blueprints/GameBPs/menuGameMode.menuGameMode_C
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/BlueprintsAndMaps/Blueprints/GameBPs/mainGameInstance.mainGameInstance_C
 
